<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- default strings -->

    <string name="app_name">K.A.T.E</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Activity titles and element/widget namings -->

    <string name="title_activity_compass">Compass</string>
    <string name="title_activity_talk_with_me">Talk With Me</string>
    <string name="title_activity_notes">Take Notes</string>
    <string name="action_main_settings">Preferences</string>
    <string name="action_main_about">About</string>
    <string name="action_main_help">Help</string>
    <string name="homescreen_greetings">Hello Vishwa..</string>
    <string name="action_notepad_settings">Settings</string>
    <string name="action_notepad_save">Save</string>
    <string name="action_notepad_share">Share</string>
    <string name="title_activity_camera">Capture</string>
    <string name="title_activity_locker">Personal Space</string>
    <string name="camera_temp">This is Camera Interface temporary message</string>
    <string name="locker_tmp">This is Locker Interface temporary message</string>
    <string name="title_activity_splash">K.A.T.E</string>
    <string name="splashbig">K A T E</string>
    <string name="splashsmall">Loading...</string>
    <string name="title_activity_main_settings">Preferences</string>
    <string name="micbtn_text_talkwithme">What Can I Do for You?</string>
    <string name="micbtn_taptospeak">Tap Mic to Speak</string>
    <string name="micbtn_contentdescription">Tap Mic icon to Speak</string>
    <string name="compass_content">Compass</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_reg">Welcome to K.A.T.E !</string>

    <!-- Notification -->

    <string name="home_notif_ticker">Welcome to KATE!</string>
    <string name="home_notification_title">KATE is Running</string>
    <string name="home_notification_text">Your Personal Assistant</string>
    <string name="locker_notif_ticker">Personal Space Accessed!</string>
    <string name="locker_notification_title">Personal Space</string>
    <string name="locker_notification_text">Access Denied.Insert correct access code</string>

    <!-- preferences screen -->

    <string name="category_general_title">General</string>
    <string name="category_talkwithme_title">Talk With Me Settings</string>
    <string name="category_location_title">Location Services</string>
    <string name="category_lockscreen_title">Lock Screen</string>
    <string name="category_notes_title">Notes</string>
    <string name="category_locker_title">Personal Space</string>
    <string name="category_help_title">Help</string>
    <string name="prefs_web_page">FeedBack</string>
    <string name="title_activity_lock_screen">LockScreen</string>


    <!-- Registration -->
    <string name="reg_head_email">Email</string>
    <string name="reg_head_phone">Phone</string>
    <string name="reg_head_pass">PassCode</string>
    <string name="reg_head_name">Name</string>
    <string name="reg_hint_email">Your Email Address</string>
    <string name="reg_hint_phone">Mobile Number</string>
    <string name="reg_hint_pass">Password (min 4 letters)</string>
    <string name="reg_submit_button">Register</string>
    <string name="reg_hint_name">Your Full Name</string>
    <string name="contentdesc"></string>


    <!-- login -->
    <string name="log_head_pass">App is Locked!</string>

    <!-- lockscreen -->
    <string name="slide_unlock">> Slide to Unlock</string>
    <string name="slide_talk">> Talk with Me</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_image">ImageActivity</string>


</resources>
